Adding some webcontent

--- a/RecruitmentApp/WebContent/jobs.xhtml
+++ b/RecruitmentApp/WebContent/jobs.xhtml
@@ -26,6 +26,8 @@
 		<f:facet name="header">Type</f:facet>
 			#{job.type}
 		</h:column>
+		
 	</h:dataTable>
+	<h:commandButton action="#{jobController.getAlljobs}" value="Show all" />
 </body>
 </html>
