--- a/RecruitmentApp/WebContent/jobs.xhtml
+++ b/RecruitmentApp/WebContent/jobs.xhtml
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:p="http://primefaces.org/ui"
 	xmlns:h="http://java.sun.com/jsf/html">
 
 <head>
@@ -9,6 +10,29 @@
 </head>
 <body>
 	<h1>Jobs page</h1>
+	
+	<p:menu>
+        <p:submenu label="Interview">
+            <p:menuitem value="Interviewers" url="/interviewers.xhtml" icon="ui-icon-disk" />
+            <p:menuitem value="Arrange Interview" url="/interviews.xhtml" icon="ui-icon-arrowrefresh-1-w"/>
+        </p:submenu>
+        <p:submenu label="Jobs">
+            <p:menuitem value="View open jobs" url="/jobs.xhtml" icon="ui-icon-close"/>
+        </p:submenu>
+        <p:submenu label="Comment">
+            <p:menuitem value="Add comment" url="/comments.xhtml" icon="ui-icon-close"/>
+        </p:submenu>
+        <p:submenu label="Applications">
+       		<p:menuitem value="New Application" url="/applications.xhtml" icon="ui-icon-close"/>
+            <p:menuitem value="Add applicant" url="/applicants.xhtml" icon="ui-icon-close"/>
+            <p:menuitem value="Add rating" url="/ratings.xhtml" icon="ui-icon-close"/>
+        </p:submenu>
+    </p:menu>
+	
+	
+	<h:column>
+		<a href="//localhost:8080/RecruitmentApp/interviews.xhtml">Arrange an Interview</a>	
+	</h:column>
 	<h:form>
 		<h:panelGrid>
 			Name: <h:inputText value="#{jobController.job.name}" />
