konzultáció: h:head, selectOneMenu, lista lekérdezése init-ben

--- a/RecruitmentApp/WebContent/interviewers.xhtml
+++ b/RecruitmentApp/WebContent/interviewers.xhtml
@@ -5,9 +5,9 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:h="http://java.sun.com/jsf/html">
 
-<head>
+<h:head>
 <title>Interviewers</title>
-</head>
+</h:head>
 <body>
 	<h1>Interviewers page</h1>
 	
