--- a/RecruitmentApp/WebContent/interviews.xhtml
+++ b/RecruitmentApp/WebContent/interviews.xhtml
@@ -5,9 +5,9 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:h="http://java.sun.com/jsf/html">
 
-<head>
+<h:head>
 <title>Arrange Interviews</title>
-</head>
+</h:head>
 
 
 	<p:menu>
