--- a/RecruitmentApp/WebContent/applications.xhtml
+++ b/RecruitmentApp/WebContent/applications.xhtml
@@ -5,9 +5,9 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:h="http://java.sun.com/jsf/html">
 
-<head>
+<h:head>
 <title>Add a new Application</title>
-</head>
+</h:head>
 <body>
 	<h1>Add a new Application</h1>
 	
