--- a/RecruitmentApp/WebContent/comments.xhtml
+++ b/RecruitmentApp/WebContent/comments.xhtml
@@ -5,9 +5,9 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:h="http://java.sun.com/jsf/html">
 
-<head>
+<h:head>
 <title>Add comments</title>
-</head>
+</h:head>
 <body>
 	<h1>Add comments to an interview here</h1>
 	
