--- a/RecruitmentApp/WebContent/interviewers.xhtml
+++ b/RecruitmentApp/WebContent/interviewers.xhtml
@@ -39,10 +39,20 @@
 		</h:panelGrid>
 	</h:form>
 	
-	<p:dataTable value="#{interviewerController.allInterviewers}" var="interviewer">
+	<p:dataTable value="#{interviewerController.allInterviewers}" var="interviewer" widgetVar="interviewer" editable="true">
+	
+	<f:facet name="header">
+			<p:outputPanel>
+                <h:outputText value="Search all fields:" />
+                <p:inputText id="globalFilter" onkeyup="PF('interviewer').filter()" style="width:150px" placeholder="Enter keyword"/>
+            </p:outputPanel>
+    </f:facet>
+	
 		<p:column>
+		
 			<f:facet name="header">Name</f:facet>
 			#{interviewer.name}
+		
 		</p:column>
 		<p:column>
 		<f:facet name="header">Job</f:facet>
@@ -55,6 +65,10 @@
 		<p:column>
 			<f:facet name="header">Doag</f:facet>
 			#{interviewer.doag}
+		</p:column>
+		<p:column>
+			<f:facet name="header">Delete</f:facet>
+			<p:commandLink value="Delete" action="#{interviewerController.deleteInterviewer(interviewer)}" />
 		</p:column>
 	</p:dataTable>
 </body>
