--- a/RecruitmentApp/WebContent/applications.xhtml
+++ b/RecruitmentApp/WebContent/applications.xhtml
@@ -31,8 +31,20 @@
 	
 	<h:form>
 		<h:panelGrid>
-			Applicant name: <h:inputText value="#{applicationController.application.applicant}" />
-			Job: <h:inputText value="#{applicationController.application.job}" />
+			Applicant name:
+			
+			<p:selectOneMenu id="menu2" value="#{applicantController.applicant}">
+            	<f:selectItem itemLabel="Select One" itemValue="" />
+            	<f:selectItems value="#{applicantController.allApplicants}"  var="s" itemLabel="#{s.name}"/>
+        	</p:selectOneMenu>
+			
+			Job: 
+			
+			<p:selectOneMenu id="menu3" value="#{jobController.job}">
+            	<f:selectItem itemLabel="Select One" itemValue="" />
+            	<f:selectItems value="#{jobController.alljobs}"  var="s" itemLabel="#{s.name}"/>
+        	</p:selectOneMenu>
+			
 			Stage: <h:inputText value="#{applicationController.application.stage}" />
 			Reason of stage: <h:inputText value="#{applicationController.application.reason}" />
 			Other comments: <h:inputText value="#{applicationController.application.others}" />
@@ -41,8 +53,18 @@
 		
 		</h:panelGrid>
 	</h:form>
-	
+	<h:form>
 	<p:dataTable value="#{applicationController.allApplications}" var="application">
+	
+	
+	<f:facet name="header">
+			<p:outputPanel>
+                <h:outputText value="Search all fields:" />
+                <p:inputText id="globalFilter" onkeyup="PF('application').filter()" style="width:150px" placeholder="Enter keyword"/>
+            </p:outputPanel>
+    </f:facet>
+	
+	
 		<p:column>
 			<f:facet name="header">Name</f:facet>
 			#{application.applicant}
@@ -69,5 +91,6 @@
 		</p:column>
 		
 	</p:dataTable>
+	</h:form>
 </body>
 </html>
