--- a/RecruitmentApp/WebContent/interviews.xhtml
+++ b/RecruitmentApp/WebContent/interviews.xhtml
@@ -33,34 +33,40 @@
 	<h1>Add data to arrange a new Interview</h1>
 	<h:form>
 		<h:panelGrid>
-			Job: <h:inputText value="#{interviewController.interview.job}" />
+			Job: <p:inputText value="#{interviewController.interview.job}" />
       		Date: <p:calendar mode="popup"  value="#{interviewController.interview.date}" />
-			Description: <h:inputText value="#{interviewController.interview.description}" />
-			Interviewer: <h:inputText value="#{interviewController.interview.interviewer}" />
-			Applicant: <h:inputText value="#{interviewController.interview.applicant}" />
+			Description: <p:inputText value="#{interviewController.interview.description}" />
+			Interviewer:
+			
+			<p:selectOneMenu id="menu1" value="#{interviewerController.interviewer.name}">
+            	<f:selectItem itemLabel="Select One" itemValue="" />
+            	<f:selectItems value="#{interviewerController.allInterviewers}"  var="s" itemLabel="#{s.name}"/>
+        	</p:selectOneMenu>
+			
+			Applicant: <p:inputText value="#{interviewController.interview.applicant}" />
 			<h:commandButton action="#{interviewController.createInterview}" value="Create" />
 		
 		</h:panelGrid>
 	</h:form>
-	
+	<h:form>
 	<p:dataTable value="#{interviewController.allInterviews}" var="interview">
-		<p:column>
+		<p:column filterBy="#{interview.job}">
 			<f:facet name="header">Job</f:facet>
 			#{interview.job}
 		</p:column>
-		<p:column>
+		<p:column filterBy="#{interview.date}">
 		<f:facet name="header">Date</f:facet>
 			#{interview.date}
 		</p:column>
-		<p:column>
+		<p:column filterBy="#{interview.description}">
 			<f:facet name="header">Description</f:facet>
 			#{interview.description}
 		</p:column>
-		<p:column>
+		<p:column filterBy="#{interview.interviewer}">
 			<f:facet name="header">Interviewer</f:facet>
 			#{interview.interviewer}
 		</p:column>
-		<p:column>
+		<p:column filterBy="#{interview.applicant}">
 			<f:facet name="header">Applicant</f:facet>
 			#{interview.applicant}
 		</p:column>
@@ -69,5 +75,6 @@
 			<p:commandLink value="Delete" action="#{interviewController.deleteInterview(interview)}" />
 		</p:column>
 	</p:dataTable>
+	</h:form>
 </body>
 </html>
