--- a/RecruitmentApp/WebContent/jobs.xhtml
+++ b/RecruitmentApp/WebContent/jobs.xhtml
@@ -30,9 +30,7 @@
     </p:menu>
 	
 	
-	<h:column>
-		<a href="//localhost:8080/RecruitmentApp/interviews.xhtml">Arrange an Interview</a>	
-	</h:column>
+	
 	<h:form>
 		<h:panelGrid>
 			Name: <h:inputText value="#{jobController.job.name}" />
@@ -40,13 +38,13 @@
 			<h:commandButton action="#{jobController.createJob}" value="Create" />
 		</h:panelGrid>
 	</h:form>
-	
+	<h:form>
 	<p:dataTable value="#{jobController.alljobs}" var="job">
-		<p:column>
+		<p:column filterBy="#{job.name}" sortBy="#{job.name}">
 			<f:facet name="header">Name</f:facet>
 			#{job.name}
 		</p:column>
-		<p:column>
+		<p:column filterBy="#{job.type}" sortBy="#{job.type}">
 		<f:facet name="header">Type</f:facet>
 			#{job.type}
 		</p:column>
@@ -57,6 +55,7 @@
 		</p:column>
 		
 	</p:dataTable>
+	</h:form>
 
 </body>
 </html>
