--- a/RecruitmentApp/WebContent/applicants.xhtml
+++ b/RecruitmentApp/WebContent/applicants.xhtml
@@ -41,27 +41,79 @@
 		
 		</h:panelGrid>
 	</h:form>
-	<h:form>
-	<p:dataTable value="#{applicantController.allApplicants}" var="applicant">
+	<h:form id = "form">
+	<p:growl id="msgs" showDetail="true" />
+	<p:dataTable value="#{applicantController.allApplicants}" var="applicant" editable="true"
+			editMode="cell">
+			<p:ajax event="cellEdit"
+				listener="#{applicantController.onCellEdit}" update=":form:msgs" />
+	
+	
+	
 		<p:column filterBy="#{applicant.name}" sortBy="#{applicant.name}">
 			<f:facet name="header">Name</f:facet>
-			#{applicant.name}
+			<p:cellEditor>
+					<f:facet name="output">
+						<h:outputText value="#{applicant.name}" />
+					</f:facet>
+					<f:facet name="input">
+						<p:inputText id="modelInput" value="#{applicant.name}"
+							style="width:96%" />
+					</f:facet>
+				</p:cellEditor>
+			
 		</p:column>
 		<p:column filterBy="#{applicant.birth_year}" sortBy="#{applicant.birth_year}">
 		<f:facet name="header">Birth year</f:facet>
-			#{applicant.birth_year}
+		<p:cellEditor>
+					<f:facet name="output">
+						<h:outputText value="#{applicant.birth_year}" />
+					</f:facet>
+					<f:facet name="input">
+						<p:inputText id="modelInput2" value="#{applicant.birth_year}"
+							style="width:96%" />
+					</f:facet>
+				</p:cellEditor>
+			
 		</p:column>
 		<p:column filterBy="#{applicant.job}" sortBy="#{applicant.job}">
 			<f:facet name="header">Job</f:facet>
-			#{applicant.job}
+			<p:cellEditor>
+					<f:facet name="output">
+						<h:outputText value="#{applicant.job}" />
+					</f:facet>
+					<f:facet name="input">
+						<p:inputText id="modelInput3" value="#{applicant.job}"
+							style="width:96%" />
+					</f:facet>
+				</p:cellEditor>
+			
 		</p:column>
 		<p:column filterBy="#{applicant.year}" sortBy="#{applicant.year}">
 			<f:facet name="header">Graduation</f:facet>
-			#{applicant.year}
+			<p:cellEditor>
+					<f:facet name="output">
+						<h:outputText value="#{applicant.year}" />
+					</f:facet>
+					<f:facet name="input">
+						<p:inputText id="modelInput4" value="#{applicant.year}"
+							style="width:96%" />
+					</f:facet>
+				</p:cellEditor>
+			
 		</p:column>
 		<p:column filterBy="#{applicant.university}" sortBy="#{applicant.university}">
 			<f:facet name="header">University</f:facet>
-			#{applicant.university}
+			<p:cellEditor>
+					<f:facet name="output">
+						<h:outputText value="#{applicant.university}" />
+					</f:facet>
+					<f:facet name="input">
+						<p:inputText id="modelInput5" value="#{applicant.university}"
+							style="width:96%" />
+					</f:facet>
+				</p:cellEditor>
+			
 		</p:column>
 		<p:column>
 			<f:facet name="header">Delete</f:facet>
