Home page, index.xhtml

--- a/RecruitmentApp/WebContent/jobs.xhtml
+++ b/RecruitmentApp/WebContent/jobs.xhtml
@@ -12,22 +12,8 @@
 	<h1>Jobs page</h1>
 	
 	<p:menu>
-        <p:submenu label="Interview">
-            <p:menuitem value="Interviewers" url="/interviewers.xhtml" icon="ui-icon-disk" />
-            <p:menuitem value="Arrange Interview" url="/interviews.xhtml" icon="ui-icon-arrowrefresh-1-w"/>
-        </p:submenu>
-        <p:submenu label="Jobs">
-            <p:menuitem value="View open jobs" url="/jobs.xhtml" icon="ui-icon-close"/>
-        </p:submenu>
-        <p:submenu label="Comment">
-            <p:menuitem value="Add comment" url="/comments.xhtml" icon="ui-icon-close"/>
-        </p:submenu>
-        <p:submenu label="Applications">
-       		<p:menuitem value="New Application" url="/applications.xhtml" icon="ui-icon-close"/>
-            <p:menuitem value="Add applicant" url="/applicants.xhtml" icon="ui-icon-close"/>
-            <p:menuitem value="Add rating" url="/ratings.xhtml" icon="ui-icon-close"/>
-        </p:submenu>
-    </p:menu>
+		<p:menuitem value="Home page" url="/index.xhtml"/>
+	</p:menu>
 	
 	
 	
