--- a/RecruitmentApp/WebContent/interviewers.xhtml
+++ b/RecruitmentApp/WebContent/interviewers.xhtml
@@ -11,26 +11,9 @@
 <body>
 	<h1>Interviewers page</h1>
 
-
+	
 	<p:menu>
-		<p:submenu label="Interview">
-			<p:menuitem value="Interviewers" url="/interviewers.xhtml"
-				icon="ui-icon-disk" />
-			<p:menuitem value="Arrange Interview" url="/interviews.xhtml"
-				icon="ui-icon-arrowrefresh-1-w" />
-		</p:submenu>
-		<p:submenu label="Jobs">
-			<p:menuitem value="View open jobs" url="/jobs.xhtml"
-				icon="ui-icon-close" />
-		</p:submenu>
-		<p:submenu label="Applications">
-			<p:menuitem value="New Application" url="/applications.xhtml"
-				icon="ui-icon-close" />
-			<p:menuitem value="Add applicant" url="/applicants.xhtml"
-				icon="ui-icon-close" />
-			<p:menuitem value="Add rating" url="/ratings.xhtml"
-				icon="ui-icon-close" />
-		</p:submenu>
+		<p:menuitem value="Home page" url="/index.xhtml"/>
 	</p:menu>
 
 
@@ -136,7 +119,7 @@
 			</p:column>
 			<p:column>
 				<f:facet name="header">Delete</f:facet>
-				<p:commandLink value="Delete"
+				<p:commandButton value="Delete"
 					action="#{interviewerController.deleteInterviewer(interviewer)}" />
 			</p:column>
 		</p:dataTable>
